--- a/ccg/css/style.css
+++ b/ccg/css/style.css
@@ -11,7 +11,7 @@
   --light-currency-bar-bg: #eafaf9;
   --light-tab-bg: var(--light-light);
   --light-tab-hover: #ddd;
-  --light-tab-active: #ccc;
+  --light-tab-active: #bbb;
   --light-tab-content-bg: var(--light-card-bg);
   --light-tab-content-border: #ccc;
   --light-table-bg: #fff;
@@ -43,7 +43,7 @@
   --dark-currency-bar-bg: #2d2d2d;
   --dark-tab-bg: #424242;
   --dark-tab-hover: #505050;
-  --dark-tab-active: #616161;
+  --dark-tab-active: #888888;
   --dark-tab-content-bg: #2d2d2d;
   --dark-tab-content-border: #424242;
   --dark-table-bg: #2d2d2d;
